# memocp

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml  release.yaml
src/: cleanup.rs  config.rs  copier.rs  db.rs  file_metadata.rs  hasher.rs  main.rs  processor.rs  runner.rs  scanner.rs  stats.rs  task.rs  worker.rs
src/cloning/: copier.rs  copy_op.rs  copy_stats.rs  mod.rs
src/copying/: copier.rs  copy_op.rs  copy_or_noop.rs  file_copy_result.rs  get_current_time.rs  mod.rs  temp_file_guard.rs
src/db/: db.rs  migrations.rs  mod.rs
src/db/records/: cache_record.rs  hash.rs  mod.rs  seen_record.rs
src/hashing/: hash.rs  hasher.rs  hashing_error.rs
src/models/: file_metadata.rs  mod.rs
src/progress/: cleanup_progress.rs  helpers.rs  mod.rs  processor_progress.rs  scanner_progress.rs  worker_progress.rs
src/scanning/hashing/: hash.rs  hasher.rs  hashing_error.rs  mod.rs
src/templating/: mod.rs  replacement.rs  template.rs  templater.rs
tests/: e2e_tests.rs
