[package]
name = "memocp"
version = "1.3.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
redb = "3.1.1"
tracing = { version = "0.1.44", features = ["log"] }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
tokio = { version = "1.50.0", features = ["full"] }
blake3 = "1.8.3"
anyhow = "1.0.102"
fs4 = "0.13.1"
thiserror = "2.0.18"
borsh = { version = "1.6.0", features = ["derive"] }
bytesize = "2.3.1"
ignore = "0.4.25"
tokio-stream = "0.1.18"
futures = "0.3.32"
tracing-indicatif = "0.3.14"
tracing-subscriber = "0.3.23"
dunce = "1.0.5"
reflink-copy = "0.1.19"
uuid = { version = "1.22.0", features = ["v4"] }
strum = "0.28.0"
strum_macros = "0.28"
chrono = "0.4.44"
humantime = "2.3.0"
indicatif = "0.18.4"
arc-swap = "1.8.2"
num-format = "0.4.4"
tokio-util = "0.7.18"
parking_lot = "0.12.5"

[dev-dependencies]
assert_fs = "1.1.3"
predicates = "3.1.4"
assert_matches = "1.5.0"
assert_cmd = "2.2.0"
